fix: scrollbar and layout

--- a/src/index.css
+++ b/src/index.css
@@ -12,22 +12,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-::-webkit-scrollbar {
-  background-color: #686868;
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #ffa500;
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #333333;
-  width: 6px;
-  height: 6px;
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #ffa500 #333333;
 }
 
 .bg-dark-border {
